samples/_failures_safe/1761378448_aaafb6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f5d73b72.c: In function ‘main’:
./samples/SAFE/__tmp_f5d73b72.c:180:13: error: expected declaration or statement at end of input
  180 |             printf("Result: %d\n", int_result);
      |             ^~~~~~
./samples/SAFE/__tmp_f5d73b72.c:180:13: error: expected declaration or statement at end of input
